--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "eslint": "^8.52.0",
+    "eslint-plugin-vue": "^9.17.0",
     "nuxt": "^3.8.0",
+    "typescript": "^5.2.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
