--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
+    "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.52.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.17.0",
     "nuxt": "^3.8.0",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
