--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "nuxt": "^3.8.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.3.22"
   },
   "dependencies": {
+    "@mdi/font": "^7.3.67",
     "@nuxtjs/tailwindcss": "^6.8.0"
   }
 }
