--- a/src/package.json
+++ b/src/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.3.67",
-    "@nuxtjs/tailwindcss": "^6.8.0"
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "dayjs": "^1.11.10"
   }
 }
